<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="250dp"
    android:layout_height="230dp"
    android:padding="12dip"
    android:gravity="center_horizontal"
    >

    <TextView
        android:id="@+id/about_titre"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:paddingBottom="12dip"
        android:gravity="center_horizontal"
        />

<TextView
    android:id="@+id/blabla"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/about_text"
    android:paddingBottom="12dip"
    android:gravity="center_horizontal"
    android:layout_below="@id/about_titre"
    />

    <TextView
        android:id="@+id/about_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version"
        android:paddingBottom="12dip"
        android:layout_below="@id/blabla"
        android:layout_weight="2"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about_version_number"
        android:gravity="center_horizontal"
        android:layout_below="@id/blabla"
        android:layout_toRightOf="@id/about_version"
        android:layout_toEndOf="@id/about_version"
        android:layout_weight="1"
        />

 <Button
     android:id="@+id/btn_finish_about"
     android:layout_height="wrap_content"
     android:layout_width="match_parent"
     android:text="@string/button_ok"
     android:layout_gravity="center_horizontal"
     android:padding="12dip"
     android:onClick="finishAbout"
     android:layout_below="@id/about_version"
     />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/about_author"
        android:gravity="center_horizontal"
        android:paddingBottom="12dip"
        android:layout_below="@id/btn_finish_about"
        />
</RelativeLayout>

